Added running time to log when stopping the engine